Открытая школа Т1/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pig-nodeport-service
  namespace: atretyakov
spec:
  type: NodePort
  selector:
    app: pig
  ports:
    - protocol: TCP
      port: 80 # входящий порт 
      targetPort: 8008 # целевой порт приложения
      nodePort: 31234  # Диапазон для выбора порта 30000-32767
