Открытая школа Т1/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pig-ingress
  namespace: atretyakov
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: pig.tretyakov  # домен
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pig-nodeport-service
            port:
              number: 80
